--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "commander": "^7.1.0",
     "jquery": "^3.5.1",
     "jsdom": "^16.4.0",
     "moment": "^2.29.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "stdio": "^2.1.1"
   }
 }
